Fix alignment of Numpy, Scrutinizer, Self and Rdoc

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -269,7 +269,7 @@
 .inno-icon:before          { .file-icons; content: "\e985"; top: 2px; }
 .io-icon:before            { .file-icons; content: "\e981"; font-size: 13px; .thicken; top: 1px; }
 .ioke-icon:before          { .file-icons; content: "\e982"; top: 2px; }
-.ionic-icon:before         { .file-icons; content: "\f14b"; top: 0; }
+.ionic-icon:before         { .file-icons; content: "\f14b"; top: 2px; }
 .isabelle-icon:before      { .file-icons; content: "\e945"; font-size: 16px; top: 2px; }
 .j-icon:before             { .file-icons; content: "\e937"; font-size: 13px; top: 1px; }
 .jade-icon:before          { .file-icons; content: "\e90d"; font-size: 14px; top: 1px; }
@@ -323,7 +323,7 @@
 .nix-icon:before           { .file-icons; content: "\e99a"; font-size: 16px; top: 3px; }
 .nmap-icon:before          { .file-icons; content: "\e94d"; font-size: 16px; top: 3px; transform: scale(1.1); }
 .npm-icon:before           { .file-icons; content: "\e91c"; font-size: 17px; top: 3px; }
-.numpy-icon:before         { .file-icons; content: "\e99d"; font-size: 14px; }
+.numpy-icon:before         { .file-icons; content: "\e99d"; font-size: 14px; top: 2px; }
 .nuget-icon:before         { .file-icons; content: "\e9d9"; top: 2px; }
 .nunjucks-icon:before      { .file-icons; content: "\e953"; top: 2px; font-size: 16px; }
 .nsis-icon:before          { .file-icons; content: "\e992"; font-size: 16px; top: 3px; }
@@ -368,11 +368,11 @@
 .r-icon:before             { .file-icons; content: "\e905"; font-size: 17px; left: 0; top: 3px; }
 .racket-icon:before        { .file-icons; content: "\e9b1"; left: 1px; top: 2px; }
 .raml-icon:before          { .file-icons; content: "\e913"; top: 1px; font-size: 14px; }
-.rdoc-icon:before          { .file-icons; content: "\e9b0"; }
+.rdoc-icon:before          { .file-icons; content: "\e9b0"; top: 2px; left: 1px; }
 .react-icon:before         { .file-icons; content: "\f100"; top: 2px; }
 .rebol-icon:before         { .file-icons; content: "\e9ae"; font-size: 13px; top: 1px; }
 .red-icon:before           { .file-icons; content: "\e9ad"; font-size: 16px; top: 3px; }
-.riot-icon:before          { .file-icons; content: "\e919"; font-size: 18px; left: 0; top: 4px; }
+.riot-icon:before          { .file-icons; content: "\e919"; font-size: 18px; top: 4px; }
 .robot-icon:before         { .file-icons; content: "\e9ac"; font-size: 14px; top: 2px; }
 .rst-icon:before           { .file-icons; content: "\e9cc"; font-size: 16px; top: 3px; }
 .sage-icon:before          { .file-icons; content: "\e9ab"; font-size: 16px; top: 3px; .thicken; }
@@ -383,8 +383,8 @@
 .scad-icon:before          { .file-icons; content: "\e911"; top: 2px; font-size: 14px; }
 .scheme-icon:before        { .file-icons; content: "\03bb"; top: 2px; }
 .scilab-icon:before        { .file-icons; content: "\e9a9"; font-size: 18px; left: -1px; top: 3px; .thicken; }
-.scrutinizer-icon:before   { .file-icons; content: "\e9d4"; font-size: 14px; }
-.self-icon:before          { .file-icons; content: "\e9a8"; font-size: 16px; }
+.scrutinizer-icon:before   { .file-icons; content: "\e9d4"; font-size: 14px; top: 2px; }
+.self-icon:before          { .file-icons; content: "\e9a8"; font-size: 16px; top: 3px; .sharpen; transform: scale(1.2); }
 .sf-icon:before            { .file-icons; content: "\e9db"; top: 2px; }
 .shen-icon:before          { .file-icons; content: "\e9a7"; top: 2px; font-size: 16px; }
 .shopify-icon:before       { .file-icons; content: "\e9cf"; top: 2px; }
